--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -7,6 +7,7 @@
   right: 15px;
   top: 15%;
   gap: 15px;
+  z-index: 30;
 }
 
 #sidebar a {
@@ -17,6 +18,7 @@
   border: 2px solid white;
   padding: 5px;
   text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 #sidebar a.active {
@@ -47,6 +49,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
   border: 2px solid white;
   cursor: pointer;
@@ -71,6 +74,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
   border: 2px solid white;
   cursor: pointer;
