--- a/css/components/targetProfile.css
+++ b/css/components/targetProfile.css
@@ -4,7 +4,7 @@
   top: 50%;
   left: 50%;
   width: 345px;
-  max-width: 90%;
+  max-width: 80%;
   transform: translate(-50%, -50%);
   z-index: 20;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(29, 29, 29, 1));
@@ -15,6 +15,7 @@
   --avatar-scale: 1.45;
   --picture-translate-x: 0%;
   --picture-scale: 1.05;
+  z-index: 10px;
 }
 
 #target-profile.active {
@@ -32,7 +33,7 @@
   justify-items: start;
   align-items: center;
   gap: 9px;
-  transform: translate(-40%, -52%);
+  transform: translate(-40%, -57%);
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 1),
@@ -316,5 +317,27 @@
   100% {
     transform: translate(-50%, -50%) rotate(0deg);
     opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 460px) {
+  #target-profile {
+    top: 44%;
+    left: 40%;
+    width: 345px;
+    max-width: 80%;
+    transform: translate(-50%, -50%);
+  }
+  #target-profile.active {
+    animation: none;
+  }
+
+  .items-display {
+    top: 40%;
+    left: 46%;
+    transform: translate(-50%, -50%);
   }
 }
